syntax = "proto3";
package seiprotocol.seichain.dex;

import "gogoproto/gogo.proto";
import "dex/enums.proto";

option go_package = "github.com/sei-protocol/sei-chain/x/dex/types";

message Order {
    uint64 id = 1 [
        (gogoproto.jsontag)    = "id",
        (gogoproto.nullable)   = true
    ];
    OrderStatus status = 2 [
        (gogoproto.jsontag)    = "status",
        (gogoproto.nullable)   = true
    ];
    string account = 3 [
        (gogoproto.jsontag)    = "account",
        (gogoproto.nullable)   = true
    ];
    string contractAddr = 4 [
        (gogoproto.jsontag)    = "contract_address",
        (gogoproto.nullable)   = true
    ];
    string price = 5 [
        (gogoproto.moretags)   = "yaml:\"price\"",
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable)   = false,
        (gogoproto.jsontag)    = "price"
    ];
    string quantity = 6 [
        (gogoproto.moretags)   = "yaml:\"quantity\"",
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable)   = false,
        (gogoproto.jsontag)    = "quantity"
    ];
    string priceDenom = 7 [
        (gogoproto.jsontag) = "price_denom"
    ];
    string assetDenom = 8 [
        (gogoproto.jsontag) = "asset_denom"
    ];
    OrderType orderType = 9 [
        (gogoproto.jsontag) = "order_type"
    ];
    PositionDirection positionDirection = 10 [
        (gogoproto.jsontag) = "position_direction"
    ];
    string data = 11 [
        (gogoproto.jsontag) = "data"
    ];
    string statusDescription = 12 [
        (gogoproto.jsontag) = "status_description"
    ];
    string nominal = 13 [
        (gogoproto.moretags)   = "yaml:\"nominal\"",
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable)   = false,
        (gogoproto.jsontag)    = "nominal"
    ];
    string triggerPrice = 14 [
        (gogoproto.moretags)   = "yaml:\"trigger_price\"",
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable)   = false,
        (gogoproto.jsontag)    = "trigger_price"
    ];
    bool triggerStatus = 15 [
        (gogoproto.jsontag) = "trigger_status"
    ];
}

message Cancellation {
    uint64 id = 1 [
        (gogoproto.jsontag) = "id"
    ];
    CancellationInitiator initiator = 2 [
        (gogoproto.jsontag) = "initiator"
    ];
    string creator = 3 [
        (gogoproto.jsontag)    = "creator",
        (gogoproto.nullable)   = true
    ];
    string contractAddr = 4 [
        (gogoproto.jsontag)    = "contract_address"
    ];
    string priceDenom = 5 [
        (gogoproto.jsontag) = "price_denom"
    ];
    string assetDenom = 6 [
        (gogoproto.jsontag) = "asset_denom"
    ];
    PositionDirection positionDirection = 7 [
        (gogoproto.jsontag) = "position_direction"
    ];
    string price = 8 [
        (gogoproto.moretags)   = "yaml:\"price\"",
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable)   = false,
        (gogoproto.jsontag)    = "price"
    ];
}

message ActiveOrders {
    repeated uint64 ids = 1 [
        (gogoproto.jsontag) = "ids"
    ];
}
